# one-click-gemma

./: .gitignore  .vercelignore  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  vercel.json
.github/workflows/: release.yml
app/src/: app.js  index.html  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: chat_test.rs  commands.rs  headless.rs  lib.rs  main.rs  model_pull.rs  ollama_install.rs  ollama_service.rs  openclaw.rs  progress.rs  sysinfo.rs
linux/: install.sh
openclaw/: provider.template.json
scripts/: install.ps1  install.sh
tests/: install_sh_test.sh
website/: index.html  whats-new.html
