[package]
name = "gemma-installer"
version = "1.1.2"
edition = "2021"
description = "One-click installer for Google Gemma 4, exposing an OpenAI-compatible local API for OpenClaw"
license = "Apache-2.0"
repository = "https://github.com/microblue/gemma-installer"
default-run = "gemma-installer"

[lib]
name = "gemma_installer"
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "gemma-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
directories = "5"
sysinfo = "0.32"
which = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
